--- a/src/css/About.css
+++ b/src/css/About.css
@@ -37,7 +37,6 @@
   margin-left: 10rem;
   overflow: hidden;
   border-radius: 3rem;
-  object-fit: cover;
 }
 
 @media only screen and (max-width: 960px) {
@@ -64,7 +63,6 @@
     width: 50%;
     margin: auto;
     margin-bottom: 25%;
-    object-fit: cover;
   }
 
   .about-img > img {
